Guard new `URLEncoder.encode()` with Android version check